<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin">

    <include
        android:id="@+id/include"
        layout="@layout/background1"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <EditText
        android:id="@+id/Username"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="256dp"
        android:backgroundTint="#FFFCFC"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/User_name"
        android:inputType="textPersonName"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView32"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="332dp"
        android:backgroundTint="#FFFCFC"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/Pass_word"
        android:inputType="textPassword"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView33"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/text_view1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text_view2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="91dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="128dp"
        android:text="@string/sign_in"
        android:textColor="@color/color_outdoor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/forgetpassword"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin" />

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/forget_password"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="268dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signin1" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        app:srcCompat="@drawable/signin2" />

</androidx.constraintlayout.widget.ConstraintLayout>