<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <include
        android:id="@+id/background"
        layout="@layout/background1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <TextView
        android:id="@+id/username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="250dp"
        android:text="用  户  名"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_lusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/User_name"
        android:inputType="textPersonName"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        app:layout_constraintBaseline_toBaselineOf="@+id/username"
        app:layout_constraintStart_toEndOf="@+id/username" />

    <TextView
        android:id="@+id/password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="密        码"
        android:textColor="@color/color_outdoor"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/et_lpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/Pass_word"
        android:inputType="textPassword"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        app:layout_constraintBaseline_toBaselineOf="@+id/password"
        app:layout_constraintStart_toEndOf="@+id/password" />

    <TextView
        android:id="@+id/rePassword"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="确认密码"
        android:textColor="@color/color_outdoor"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/et_lrePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/Pass_word"
        android:inputType="textPassword"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        app:layout_constraintBaseline_toBaselineOf="@+id/rePassword"
        app:layout_constraintStart_toEndOf="@+id/rePassword" />

    <TextView
        android:id="@+id/email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="邮        箱"
        android:textColor="@color/color_outdoor"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rePassword" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/E_mail"
        android:inputType="textPersonName"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        app:layout_constraintBaseline_toBaselineOf="@+id/email"
        app:layout_constraintStart_toEndOf="@+id/email" />

    <TextView
        android:id="@+id/signupsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/signinsignup"
        android:textColor="@color/color_outdoor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

</androidx.constraintlayout.widget.ConstraintLayout>