<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/background"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <ImageView
        android:id="@+id/personalInformation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gerenxnxi" />

    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:alpha="0.7"
        android:hint="@string/tips"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/relax"
        android:layout_width="119dp"
        android:layout_height="97dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:onClick="mainact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagpic"
        app:srcCompat="@drawable/relax" />

    <ImageView
        android:id="@+id/leaderboard"
        android:layout_width="118dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totimer"
        app:srcCompat="@drawable/leaderboard" />

    <ImageView
        android:id="@+id/eyescare"
        android:layout_width="119dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="68dp"
        android:onClick="news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard"
        app:srcCompat="@drawable/eyescare" />

    <TextView
        android:id="@+id/signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="退出"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signoutpic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tuichu" />

    <TextView
        android:id="@+id/relax_word"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/relax"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/leaderboard_word"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="160dp"
        android:gravity="center"
        android:text="@string/leaderboard"
        android:textColor="@color/color_outdoor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/eyescare_word"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/eyescare"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/doneDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="160dp"
        android:text="@string/done_days"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/donedaysnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="474dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.e.view.CusRead
        android:id="@+id/cusread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.example.e.view.CusRead>

    <ImageView
        android:id="@+id/toflagpic"
        android:layout_width="119dp"
        android:layout_height="97dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="350dp"
        android:onClick="EPV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/toflag" />

    <ImageView
        android:id="@+id/flagpic"
        android:layout_width="119dp"
        android:layout_height="96dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toflagpic"
        app:srcCompat="@drawable/flagpic" />

    <TextView
        android:id="@+id/flagword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="420dp"
        android:text="设置目标"
        android:textColor="@color/color_outdoor"
        android:textColorHint="@color/color_outdoor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/totimer"
        android:layout_width="119dp"
        android:layout_height="97dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/totimer" />

    <TextView
        android:id="@+id/usedhoursword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="92dp"
        android:text="时长统计"
        android:textColor="@color/color_outdoor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usedhoursnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/usedhoursword"
        app:layout_constraintStart_toEndOf="@id/usedhoursword" />

    <TextView
        android:id="@+id/flaghoursnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/flagword"
        app:layout_constraintStart_toEndOf="@+id/flagword" />

</androidx.constraintlayout.widget.ConstraintLayout>